fix: 탐색 로직 수정